# qr

./: Makefile  README.md  pyproject.toml
qr/: qr.py  test_qr.py
