[project]
name = "qr"

[tool.pytest.ini_options]
markers = """
integration: mark as an integration test, excludes from 'make test'
"""
asyncio_mode = "auto"

[tool.poetry]
name = "qr"
version = "0.1.0"
description = ""
authors = ["Caspar <caspar.n@gmail.com>"]

[tool.poetry.scripts]
app = "qr.main:main"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
opencv-python-headless = "^4.9.0.80"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pytest = "^8.0.0"
pyre-check = "^0.9.19"
pytest-asyncio = "^0.21.1"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = "."
venv = ".venv"
